front-gateway/src/components/Search/style/filter.scss
.filter-toggle-container {
  left: 100px;
  position: fixed;
  right: 100px;
  text-align: center;
  top: 15px;
  z-index: 1099;

  button {
    width: 110px;

    &::after {
      content: '\f0b0';
      font-family: FontAwesome;
      margin-right: 5px;
    }
  }

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.filter-wrapper {
  background-color: $brand-white;
  z-index: 1;

  @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.2));

  @media (max-width: $screen-xs-max) {
    padding: 24px 15px 0;
    position: relative;

    &.hide-mobile-filter {
      display: none;
    }
  }

  @media (min-width: $screen-sm-min) {
    padding: 20px 15px 6px;
    position: absolute;
    width: 100%;
  }
}

.filter-collapse-handle {
  border-bottom: 1px solid #cecece;
  border-top: 1px solid #cecece;
  height: 4px;
  margin: 0 auto;
  opacity: 1;
  transition: opacity 1s;
  width: 60px;

  &.filter-collapse-handle-hidden {
    opacity: 0;
    transition: opacity 0s;
  }
}

.filter-close {
  text-align: center;

  .filter-close-text {
    color: #00f;
    cursor: pointer;
    display: inline-block;
    font-size: 15px;
    margin-bottom: 10px;
    padding: 15px;
    text-decoration: underline;
  }

  @media (min-width: $screen-sm-min) {
    display: none;
  }
}

.filter-trigger-container {
  border: 1px solid #d8d8d8;
  border-radius: 4px;
  cursor: pointer;
  display: inline-block;
  font-size: 15px;
  height: 35px;
  line-height: 32px;
  padding-right: 13px;
  text-align: right;
  vertical-align: middle;
  width: 100%;

  &::after {
    content: '\f0d7';
    font-family: FontAwesome;
    left: 25px;
    position: absolute;
  }

  &.filter-trigger-active::after {
    color: #3398db;
    content: '\f058';
    font-size: 22px;
  }

  @media (max-width: $screen-xs-max) {
    height: 45px;
    line-height: 41px;
    margin: 10px auto;
    padding: 0;
    text-align: center;
  }
}

.filter-dropdown-wrapper > div {
  width: 100%;
}

.filter-dropdown {
  background-color: $brand-white !important;
  border: 1px solid #d8d8d8 !important;
  border-radius: 4px !important;
  box-shadow: none !important;
  font-size: 15px !important;
  line-height: 13px !important;
  overflow: hidden;
  padding-left: 25px !important;
  text-align: right;
  text-overflow: ellipsis;
  width: 100%;

  &::after {
    content: '\f0d7';
    font-family: FontAwesome;
    left: 9px;
    position: absolute;
  }

  &.filter-trigger-active::after {
    color: #3398db;
    content: '\f058';
    font-size: 22px;
  }

  @media (max-width: $screen-xs-max) {
    height: 45px;
    margin: 10px auto;
    text-align: center;
  }
}

.filter-future-booking-switch {
  color: #4d4d4d;
  display: inline-block;
  font-size: 15px;
  line-height: 17px;
  margin: 7px 0 27px;
}

.filter-future-booking-switch-mobile-wrapper {
  margin-top: 20px;
  text-align: center;
  line-height: 20px;
}

.filter-future-booking-new {
  background-color: #e74c3c;
  border-radius: 2px;
  color: $brand-white;
  font-size: 11px;
  margin-right: 10px;
  padding: 0 3px;
  vertical-align: text-bottom;
}

.filter-future-booking-tooltip {
  width: 179px;
}

.filter-save {
  background-color: $brand-white;
  border-color: $brand-info;
  color: $brand-info;

  @media (min-width: $screen-sm-min) {
    width: 96px;
  }
}

.filter-admin-switch {
  display: inline-block;
  width: 157px;

  @media (max-width: $screen-xs-max) {
    width: 130px;
  }
}

.filter-switch-group-header {
  margin-bottom: 3px;

  .like-filter-icon {
    color: #ea441a;
    margin-left: 5px;
  }
}

.filter-input-wrapper {
  display: inline-block;
  font-size: 13px;
  vertical-align: top;
  width: 50%;
}

.filter-amenities-container {
  font-size: 13px;
  line-height: $line-height-computed;

  .checkbox {
    padding-bottom: 15px;
  }

  > [class*='col-'] {
    padding-left: 0;
    padding-right: 0;
  }
}

.filter-area-popup,
.filter-mr-popup,
.filter-extra-popup,
.filter-rooms-popup,
.filter-lease-start-popup {
  border: none;
  border-radius: 0;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
  margin-top: 7px !important;
  max-width: none;
  width: 290px;
  z-index: 10;

  > .arrow {
    display: none;
  }
}

#min-lease-date-picker_group .fade.in.popover.bottom {
  margin-top: 54px;
}

#max-lease-date-picker_group .fade.in.popover.bottom {
  margin-top: 122px;
}

.filter-extra-popup {
  @media (min-width: $screen-sm-min) {
    width: 345px;
  }
}

// nouislider overrides
.filter-mr-popup,
.filter-rooms-popup {
  height: 100px;

  .popover-content {
    padding: 31px;
  }

  .noUi-target {
    height: 4px;
    width: 220px;
  }

  .noUi-connect {
    background-color: $brand-primary;
  }

  .noUi-value-large {
    font-size: 15px;

    &:last-child::after {
      color: $brand-success;
      content: "+";
    }
  }
}

.filter-mr-popup .noUi-value-large::before {
  color: $gray-light;
  content: "₪";
  font-size: 12px;
}

.noUi-target * {
  direction: ltr;
}

.noUi-marker {
  width: 1px !important;
}

.noUi-handle {
  background-color: $brand-white !important;
  border: 1px solid lighten($gray-light, 30%) !important;
  border-radius: 50% !important;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
  cursor: pointer !important;
  height: 19.6px !important;
  left: -10px !important;
  top: -9px !important;
  width: 19.6px !important;

  &:hover {
    cursor: hand !important;
  }

  &::before,
  &::after {
    display: none !important;
  }
}

.noUi-connect {
  height: 4px;
}

.noUi-value-sub {
  font-size: 12px;
}

.noUi-value-large {
  color: $brand-primary;
  padding-top: 5px;
}

